<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProvinceDetailActivity"
    android:orientation="vertical"
    android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_province"
            android:layout_width="173dp"
            android:layout_height="161dp"
            android:src="@android:color/darker_gray"
            android:contentDescription="@string/image_photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextContent.Titile"
                android:text="@string/nama_provinsi"/>

            <TextView
                android:id="@+id/tv_province_name"
                style="@style/TextContent.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/province" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextContent.Titile"
                android:text="@string/nama_ibukota"/>

            <TextView
                android:id="@+id/tv_capital_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextContent.Subtitle"
                android:text="@string/capital" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextContent.Titile"
                android:text="@string/tanggal_jadi"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextContent.Subtitle"
                android:text="@string/date"/>

        </LinearLayout>



    </LinearLayout>



    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextContent.Description"
        android:text="@string/desc"/>

</LinearLayout>