<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@android:color/holo_blue_bright">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:src="@android:color/darker_gray"
            android:contentDescription="@string/photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/img_item_photo">

            <TextView
                android:id="@+id/tv_province_name"
                style="@style/TextContent.Titile"
                android:text="@string/province_name"/>

            <TextView
                android:id="@+id/tv_capital_name"
                style="@style/TextContent.Subtitle"
                android:text="@string/tv_capital_name"/>

            <Button
                android:id="@+id/btn_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="#3F51B5"
                android:textColor="#FFFFFF"
                android:text="@string/read" />

        </LinearLayout>

    </RelativeLayout>



</androidx.cardview.widget.CardView>